# smartbots-2023-starter-code

./: .gitignore  README.md
common-lisp/: 29points.asd  29points.lisp  README.md  data-types.lisp  package.lisp
cpp/: Dockerfile  Readme.md  setup.sh
cpp/src/: bot.cpp  bot.hpp  main.cpp
go/: Dockerfile  README.md  go.mod  main.go
go/core/: bot.go  entry.go  utils.go
go/models/: bid.go  greeting.go  play.go  trump.go
js-common/: bid.js  chooseTrump.js  play.js
node/: Dockerfile  README.md  bid.js  node.js  package.json  play.js  prettier.config.js  shared.js
node-express/: README.md  bid.js  node-express.js  package.json  play.js
python/: Dockerfile  README.md  app.py  bot.py  requirements.txt  utils.py
python/src/: app.py  bot.py  utils.py
rust/: .dockerignore  Cargo.toml  Dockerfile  ReadMe.md
rust/src/: action_types.rs  bid.rs  bid_and_trump.rs  cards.rs  choose_trump.rs  main.rs  payload_types.rs  play.rs
