[package]
name = "a-29-from-scratch"
version = "0.1.0"
edition = "2021"
# RUSTFLAGS='-C target-feature=+crt-static'


[dependencies]
rand = {version = "0.8.5", default-features = false, features = ["std_rng"]}
# serde_json = {version = "1.0.91"}
serde = {version = "1.0.152", default-features = false, features = ["derive"]}
actix-cors = "0.6.4"
actix-web = {version = "4.2.1", default-features = false, features=["macros"]}
itertools = "0.10.5"

# ! todo: statically linked binary creation